bugfix(app) Fix breakpoints to keep site on mobile design in landscape

--- a/client/assets/stylesheets/components/dropdown.sass
+++ b/client/assets/stylesheets/components/dropdown.sass
@@ -62,7 +62,7 @@
         width: 100px
 
 
-@media (max-width: 480px)
+@media (max-width: $screen-sm)
   .dropdown-container
     &.with-images
       img
